--- a/projeto-spring-data-aula/pom.xml
+++ b/projeto-spring-data-aula/pom.xml
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.5.0</version>
+			<version>9.4.1212</version>
 		</dependency>
 		
 				<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
@@ -63,9 +63,10 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>5.3.0</version>
+			<version>5.1.0.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+
 
 
 		
